# urbs-data-processing

./: .env_template  .gitignore  Dockerfile  README.md  data_ingestion_guide.txt  docker-compose.yml  neo4j-loader.sh  process-data.sh  pyproject.toml  requirements.txt  setup.py
data/: .gitignore
data/datalake/: .gitignore
data/datalake/static_data/neighborhoods/: bairros.csv
data/shape_files/: DIVISA_DE_BAIRROS.dbf
dataprocessing/job/: decompress_files.py  download_files.py  neo4j_ingestion.py  neo4j_loader.py  refined_ingestion.py
dataprocessing/job/cypher/: create-database.cypher  database.yml  setup.cypher
dataprocessing/processors/: neo4j_ingestion.py  refined_ingestion.py  sparketl.py  trust_ingestion.py
notebooks/: bairros_h3.ipynb  neo4j-data-process.ipynb  pipeline.ipynb
